--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 
     <h3>Hobbies and interests:</h3>
     <ul>
-      <li>??????</li>
-      <li>??????</li>
-      <li>??????</li>
+      <li>Beatboxing</li>
+      <li>Padel Tennis</li>
     </ul>
 
     <h3>Places I've visited:</h3>
