--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
 
     <h3>Places I've visited:</h3>
     <ul>
-      <li>??????</li>
-      <li>??????</li>
-      <li>??????</li>
+      <li>Milano</li>
+      <li>Vienna</li>
     </ul>
   </body>
 </html>
